; ModuleID = '/home/carl/AnghaBench/darwin-xnu/security/extr_mac_iokit.c_mac_iokit_check_get_property.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/security/extr_mac_iokit.c_mac_iokit_check_get_property.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@iokit_check_get_property = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mac_iokit_check_get_property(i32 %0, i32 %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %8 = load i32, i32* @iokit_check_get_property, align 4
  %9 = load i32, i32* %4, align 4
  %10 = load i32, i32* %5, align 4
  %11 = load i8*, i8** %6, align 8
  %12 = call i32 @MAC_CHECK(i32 %8, i32 %9, i32 %10, i8* %11)
  %13 = load i32, i32* %7, align 4
  ret i32 %13
}

declare dso_local i32 @MAC_CHECK(i32, i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
